SmartTravel/force-app/main/default/objects/Emergency_Case__c/Emergency_Case__c.object-meta.xml
<CustomObject>
    <label>Emergency Case</label>
    <nameField>
        <label>Emergency Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emergency Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>