SmartTravel/force-app/main/default/objects/Emergency_Case__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <displayFormat>SOS-{0000}</displayFormat>
    <label>Case Name</label>
    <type>AutoNumber</type>
</CustomField>