SmartTravel/force-app/main/default/objects/Emergency_Case__c/fields/Emergency_Type__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Type__c</fullName>
    <label>Emergency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Lost &amp; Found</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Vendor Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>